# bitspec

./: Cargo.toml
c_src/: encoding.c  encoding.h  makefile  test.c
src/: compression.c  compression.rs  field.c  field.rs  lib.rs  main.rs  spec.rs
